--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ PORT=3000
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=example
 POSTGRES_DB=postgres
-POSTGRES_HOST=localhost
+POSTGRES_HOST=host.docker.internal
 POSTGRES_PORT=5432
 # ------------------- Redis -------------------
-REDIS_HOST=localhost
+REDIS_HOST=host.docker.internal
 REDIS_PORT=6379
 REDIS_USER=default
 REDIS_PASSWORD=example
@@ -15,7 +15,7 @@ ADMIN_NAME=admin
 ADMIN_EMAIL=admin@email.e2e-test
 ADMIN_PASSWORD=example
 # ------------------- Email -------------------
-EMAIL_HOST=localhost
+EMAIL_HOST=host.docker.internal
 EMAIL_PORT=1025
 EMAIL_SECURE=false
 EMAIL_USER=example
@@ -26,7 +26,7 @@ E2E_ADMIN_NAME=admin
 E2E_ADMIN_EMAIL=admin@email.e2e-test
 E2E_ADMIN_PASSWORD=ghj%ok12KM09st
 # ------------------- E2E Redis -------------------
-E2E_EMAIL_HOST=localhost
+E2E_EMAIL_HOST=host.docker.internal
 E2E_EMAIL_PORT=1025
 E2E_EMAIL_USER=example
 E2E_EMAIL_PASSWORD=example
@@ -36,7 +36,7 @@ E2E_EMAIL_SECURE=false
 E2E_POSTGRES_USER=postgres
 E2E_POSTGRES_PASSWORD=example
 E2E_POSTGRES_DB=test
-E2E_POSTGRES_HOST=localhost
+E2E_POSTGRES_HOST=host.docker.internal
 E2E_POSTGRES_PORT=5432
 # ------------------- Paseto -------------------
 # PASETO_SECRET_KEY=$(openssl rand -hex 32)
